--- a/starwarsUI/index.html
+++ b/starwarsUI/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Star Wras UI</title>
+    <title>Star Wars UI</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Amethysta&family=Montserrat&display=swap');
+    </style>
   </head>
   <body>
     <main id="app">
@@ -18,7 +21,7 @@
                 </svg>
               </icon>
               <h2 class="info__title">Un nouvel espoir</h2>
-              <span class="info__synospsis">C'est le premier opus de la saga Star Wars par sa date de sortie, mais le quatrième selon l'ordre chronologique de l'histoire.</span>
+              <div class="info__synopsis">C'est le premier opus de la saga Star Wars par sa date de sortie, mais le quatrième selon l'ordre chronologique de l'histoire.</div>
             </div>
             <!-- <div class="info info-2">
               <icon class="info__logo">
@@ -27,7 +30,7 @@
                 </svg>
               </icon>
               <h2 class="info__title">L’empire contre-attaque</h2>
-              <span class="info__synospsis">La guerre entre le maléfique Empire galactique et son antagoniste, l’Alliance rebelle, bat son plein.</span>
+              <div class="info__synopsis">La guerre entre le maléfique Empire galactique et son antagoniste, l’Alliance rebelle, bat son plein.</div>
             </div>
             <div class="info info-3">
               <icon class="info__logo">
@@ -36,16 +39,16 @@
                 </svg>
               </icon>
               <h2 class="info__title">Le retour du Jedi</h2>
-              <span class="info__synospsis">Le maléfique Empire galactique construit une nouvelle station spatiale Étoile de la mort pour anéantir définitivement l'Alliance rebelle.</span>
+              <div class="info__synopsis">Le maléfique Empire galactique construit une nouvelle station spatiale Étoile de la mort pour anéantir définitivement l'Alliance rebelle.</div>
             </div> -->
           </div>
           <div class="date">
-            <span class="fixed">19</span>
-            <span class="d-1">7</span>
-            <!-- <span class="d-2">8</span> -->
-            <span class="y-1">7</span>
-            <!-- <span class="y-2">0</span>
-            <span class="y-3">3</span> -->
+            <div class="fixed">19</div>
+            <div class="d-1">7</div>
+            <!-- <div class="d-2">8</div> -->
+            <div class="y-1">7</div>
+            <!-- <div class="y-2">0</div>
+            <div class="y-3">3</div> -->
           </div>
         </div>
         <div class="poster-wrapper">
@@ -55,7 +58,7 @@
         </div>
       </section>
       <nav class="navbar">
-          <div class="arrow-block">
+          <div class="navbar__arrows">
             <icon>
               <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M35.5 12.0001C35.5 12.3316 35.3683 12.6496 35.1339 12.884C34.8995 13.1184 34.5815 13.2501 34.25 13.2501L4.7675 13.2501L12.635 21.1151C12.8697 21.3498 13.0016 21.6682 13.0016 22.0001C13.0016 22.3321 12.8697 22.6504 12.635 22.8851C12.4003 23.1198 12.0819 23.2517 11.75 23.2517C11.4181 23.2517 11.0997 23.1198 10.865 22.8851L0.864997 12.8851C0.748592 12.769 0.656234 12.6311 0.593219 12.4792C0.530204 12.3273 0.497764 12.1645 0.497764 12.0001C0.497764 11.8357 0.530204 11.6729 0.593219 11.521C0.656234 11.3692 0.748592 11.2312 0.864997 11.1151L10.865 1.11511C11.0997 0.880396 11.4181 0.748534 11.75 0.748534C12.0819 0.748534 12.4003 0.880396 12.635 1.11511C12.8697 1.34983 13.0016 1.66817 13.0016 2.00011C13.0016 2.33205 12.8697 2.6504 12.635 2.88511L4.7675 10.7501L34.25 10.7501C34.5815 10.7501 34.8995 10.8818 35.1339 11.1162C35.3683 11.3507 35.5 11.6686 35.5 12.0001Z" fill="#FFF38A"/>
@@ -67,13 +70,13 @@
               </svg>
             </icon>
           </div>
-          <div class="timeline">
-            <div class="timeline-dot"></div>
-            <div class="timeline-dot"></div>
-            <div class="timeline-dot"></div>
-            <div class="timeline-dot"></div>
-            <div class="timeline-dot"></div>
-            <div class="timeline-line"></div>
+          <div class="navbar__timeline">
+            <div class="navbar__timeline-dot"></div>
+            <div class="navbar__timeline-dot"></div>
+            <div class="navbar__timeline-dot"></div>
+            <div class="navbar__timeline-dot"></div>
+            <div class="navbar__timeline-dot"></div>
+            <div class="navbar__timeline-line"></div>
           </div>
       </nav>
     </main>
