--- a/starwarsUI/index.html
+++ b/starwarsUI/index.html
@@ -71,11 +71,11 @@
             </icon>
           </div>
           <div class="navbar__timeline">
-            <div class="navbar__timeline-dot"></div>
-            <div class="navbar__timeline-dot"></div>
-            <div class="navbar__timeline-dot"></div>
-            <div class="navbar__timeline-dot"></div>
-            <div class="navbar__timeline-dot"></div>
+            <div class="navbar__timeline-dot dot-1"></div>
+            <div class="navbar__timeline-dot dot-2"></div>
+            <div class="navbar__timeline-dot dot-3"></div>
+            <div class="navbar__timeline-dot dot-4"></div>
+            <div class="navbar__timeline-dot dot-5"></div>
             <div class="navbar__timeline-line"></div>
           </div>
       </nav>
