--- a/starwarsUI/index.html
+++ b/starwarsUI/index.html
@@ -51,10 +51,12 @@
             <div class="y-3">3</div> -->
           </div>
         </div>
-        <div class="poster-wrapper">
-          <img class="poster-1" src="./assets/MV5BNzVlY2MwMjktM2E4OS00Y2Y3LWE3ZjctYzhkZGM3YzA1ZWM2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@ 1.png" alt="Un nouvel espoir">
-          <!-- <img class="poster-2" src="./assets/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@ 1.png" alt="Le retour du Jedi">
-          <img class="poster-3" src="./assets/55c53b944410859376e55edc1ae3ae5b 1.png" alt="L'Empire contre-attaque"> -->
+        <div class="image-section">
+          <div class="poster-wrapper">
+            <div class="poster p-1"></div>
+            <div class="poster p-2"></div>
+            <div class="poster p-3"></div>
+          </div>
         </div>
       </section>
       <nav class="navbar">
@@ -71,19 +73,19 @@
             </icon>
           </div>
           <ul class="navbar__timeline">
-            <li class="active">
+            <li class="li-1 active">
               <div class="line"></div>
             </li>
-            <li>
+            <li class="li-2">
               <div class="line"></div>
             </li>
-            <li>
+            <li class="li-3">
               <div class="line"></div>
             </li>
-            <li>
+            <li class="li-4">
               <div class="line"></div>
             </li>
-            <li>
+            <li class="li-5">
               <div class="line"></div>
             </li>
           </ul>
