--- a/starwarsUI/index.html
+++ b/starwarsUI/index.html
@@ -44,11 +44,15 @@
           </div>
           <div class="date">
             <div class="fixed">19</div>
-            <div class="d-1 active">7</div>
-            <!-- <div class="d-2">8</div> -->
-            <div class="y-1 active">7</div>
-            <!-- <div class="y-2">0</div>
-            <div class="y-3">3</div> -->
+            <div class="decade">
+              <div class="number nb1 active">7</div>
+              <div class="number nb2 nb3">8</div>
+            </div>
+            <div class="year">
+              <div class="number nb1 active">7</div>
+              <div class="number nb2">0</div>
+              <div class="number nb3">3</div>
+            </div>
           </div>
         </div>
         <div class="image-section">
